--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,23 @@
         android:id="@+id/memeImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#F8BBD0"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
-
-    <Button
+        tools:srcCompat="@tools:sample/avatars"
+        app:layout_constraintBottom_toTopOf="@+id/shareButton"
+        />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/memeImageView"
+            app:layout_constraintBottom_toBottomOf="@id/memeImageView"
+            app:layout_constraintLeft_toLeftOf="@id/memeImageView"
+            app:layout_constraintRight_toRightOf="@id/memeImageView"
+            />
+    <android.widget.Button
         android:id="@+id/shareButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -26,9 +36,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/guideline2"
         android:onClick="shareMeme"
+        android:background="@color/shareButtonColor"
+        android:textColor="@color/white"
         />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/nextButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -38,7 +50,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@id/guideline2"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:background="@color/nextButtonColor"
+        android:textColor="@color/white"
+        />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
